--- a/chat-back/src/main/resources/application.properties
+++ b/chat-back/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=chat-back
+server.port=8080
+spring.datasource.url= = postgres:localhost:5432/chatApp
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
