--- a/chat-back/src/main/resources/application.properties
+++ b/chat-back/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=chat-back
 server.port=8080
-spring.datasource.url= = postgres:localhost:5432/chatApp
+spring.datasource.url=jdbc:postgresql://localhost:5432/chat-app
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
