feat: add credentials file .env.properties

--- a/chat-back/src/main/resources/application.properties
+++ b/chat-back/src/main/resources/application.properties
@@ -1,8 +1,10 @@
+spring.config.import=optional:classpath:/.env.properties
+
 spring.application.name=chat-back
 server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/chat-app
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=${db.username}
+spring.datasource.password=${db.password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
