--- a/chat-back/.gitignore
+++ b/chat-back/.gitignore
@@ -18,7 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
-src/main/resources/.env.properties
+chat-back/src/main/resources/.env.properties
 
 ### NetBeans ###
 /nbproject/private/
