feat: added send request front and websocket connection

--- a/chat-back/src/main/resources/application.properties
+++ b/chat-back/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=${db.password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework.messaging=DEBUG
