--- a/chat-front/package.json
+++ b/chat-front/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@stomp/stompjs": "^7.0.0",
+    "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "sockjs-client": "^1.6.1",
